--- a/src/test/scala/application.conf
+++ b/src/test/scala/application.conf
@@ -9,6 +9,11 @@ akka.persistence.journal.plugin = "inmemory-journal"
 akka.persistence.snapshot-store.plugin = "inmemory-snapshot-store"
 akka.persistence.snapshot-store.local.dir = "target/snapshots"
 
+
+
 cart.timeout=1
 checkout.timeout=1
 payment.timeout=1
+
+main.akka.remote.netty.tcp.port = 2552
+productcatalog.akka.remote.netty.tcp.port = 2553
