--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,26 +1,34 @@
 akka {
-  loglevel = "DEBUG"
+  loglevel = Debug
   actor {
-    provider = "akka.remote.RemoteActorRefProvider"
+    provider = "akka.cluster.ClusterActorRefProvider"
     debug {
-      # enable function of LoggingReceive, which is to log any received message at
-      # DEBUG level
       receive = on
     }
   }
   remote {
-    enabled-transports = ["akka.remote.netty.tcp"]
+    log-remote-lifecycle-events = off
     netty.tcp {
-      hostname = "127.0.0.1"
+      hostname = ${clustering.ip}
+      port = ${clustering.port}
     }
+  }
+  cluster {
+    seed-nodes = [
+      "akka.tcp://"${application.name}"@"${clustering.ip}":"${clustering.port}""
+    ]
   }
 }
 
-akka.persistence.journal.leveldb.native = off
-akka.persistence.journal.plugin = "akka.persistence.journal.leveldb"
-akka.persistence.snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-akka.persistence.journal.leveldb.dir = "target/journal"
-akka.persistence.snapshot-store.local.dir = "target/snapshots"
+clustering {
+  ip = "127.0.0.1"
+  port = 2552
+}
 
-main.akka.remote.netty.tcp.port = 2552
-productcatalog.akka.remote.netty.tcp.port = 2553
+application {
+  name = ProductCatalogue
+  exposed-port = 8080
+}
+
+test.akka.actor.provide = local
+test.akka.loglevel = OFF
